--- a/contact.html
+++ b/contact.html
@@ -79,20 +79,20 @@
     <nav
         class="fixed top-0 left-0 right-0 z-50 bg-[#050505]/80 backdrop-blur-xl border-b border-white/5 h-20 flex items-center">
         <div class="max-w-[1440px] w-full mx-auto flex items-center justify-between px-8">
-            <a href="pure_ring_rentals_landing_page_2/code.html"
+            <a href="index.html"
                 class="flex items-center gap-2 group transition-transform active:scale-95">
                 <span class="text-xl font-black italic tracking-tighter uppercase">Pure <span
                         class="text-[#00E0FF]">Ring</span></span>
             </a>
             <div class="hidden md:flex items-center gap-10">
                 <a class="text-[10px] font-black tracking-[0.2em] text-zinc-400 hover:text-white transition-colors uppercase py-1"
-                    href="pure_ring_rentals_landing_page_2/code.html">Home</a>
+                    href="index.html">Home</a>
                 <a class="text-[10px] font-black tracking-[0.2em] text-zinc-400 hover:text-white transition-colors uppercase py-1"
                     href="fleet/variant_1.html">Fleet</a>
                 <a class="text-[10px] font-black tracking-[0.2em] text-zinc-400 hover:text-white transition-colors uppercase py-1"
-                    href="pure_ring_rentals_landing_page_2/code.html#track">Track Info</a>
+                    href="index.html#track">Track Info</a>
                 <a class="text-[10px] font-black tracking-[0.2em] text-zinc-400 hover:text-white transition-colors uppercase py-1"
-                    href="pure_ring_rentals_landing_page_2/code.html#faq">FAQ</a>
+                    href="index.html#faq">FAQ</a>
                 <a class="text-[10px] font-black tracking-[0.2em] text-white transition-colors uppercase border-b-2 border-accent-cyan py-1"
                     href="contact.html">Contact</a>
             </div>
@@ -224,7 +224,7 @@
     <!-- Footer -->
     <footer class="pt-24 pb-12 px-8 max-w-[1440px] w-full mx-auto">
         <div class="flex flex-col md:flex-row justify-between items-center gap-10 border-t border-white/5 pt-12">
-            <a href="pure_ring_rentals_landing_page_2/code.html" class="flex items-center gap-2">
+            <a href="index.html" class="flex items-center gap-2">
                 <span class="text-xl font-black italic tracking-tighter uppercase">Pure <span
                         class="text-[#00E0FF]">Ring</span></span>
             </a>
