Increase bottom padding of hero section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
             </div>
         </div>
     </nav>
-    <section class="relative min-h-screen flex flex-col justify-center items-start pt-20 overflow-hidden" id="home">
+    <section class="relative min-h-screen flex flex-col justify-center items-start pt-20 pb-40 overflow-hidden"
+        id="home">
         <!-- Cinematic Background Effects -->
         <div class="absolute inset-0 z-0 overflow-hidden">
             <!-- Brighter hero with subtle edge vignettes only -->
