Insert explicit spacer div for dark background

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
         </div>
     </nav>
-    <section class="relative min-h-screen flex flex-col justify-center items-start pt-20 pb-40 mb-40 overflow-hidden"
+    <section class="relative min-h-screen flex flex-col justify-center items-start pt-20 pb-40 overflow-hidden"
         id="home">
         <!-- Cinematic Background Effects -->
         <div class="absolute inset-0 z-0 overflow-hidden">
@@ -230,6 +230,10 @@
             </div>
         </div>
     </section>
+
+    <!-- Dark Spacer Section -->
+    <div class="w-full h-64 md:h-96 bg-[#050505]"></div>
+
     <section class="py-24 bg-white border-y border-zinc-200 overflow-hidden">
         <div class="max-w-[1400px] mx-auto px-6">
             <div class="flex items-center gap-6 mb-12">
