Replace text logo with visual logo in nav

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         class="fixed top-0 left-0 right-0 z-50 bg-[#050505]/80 backdrop-blur-xl border-b border-white/5 h-20 flex items-center">
         <div class="max-w-[1440px] w-full mx-auto flex items-center justify-between px-8">
             <a href="#" class="flex items-center gap-2 group transition-transform active:scale-95">
-                <span class="text-xl font-black italic tracking-tighter uppercase">Pure <span
-                        class="text-[#00E0FF]">Ring</span></span>
+                <img src="images/logo.png" alt="Pure Ring Rentals" class="h-8 md:h-10 w-auto object-contain">
             </a>
             <div class="hidden md:flex items-center gap-10">
                 <a class="text-[10px] font-black tracking-[0.2em] text-white transition-colors uppercase border-b-2 border-accent-cyan py-1"
